quiz app completed

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,13 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Welcome to Police Bharti Online Coaching !</h2>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    This is a learning app for Police bharti 2018 and onwards. It comes with simple learning module and quiz to check your skills  comes with simple tabs-based layout for apps
+    that are gosdsing to primarily use a Tabbed UI.
   </p>
   <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+<button ion-button (click)="learn()"> Learn</button>
+
   </p>
 </ion-content>
