--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Quiz Category
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-
+<ion-content>
+  <ion-list>
+    <ion-list-header>Quiz Categories</ion-list-header>
+    <ion-item (click)="goQuiz(x)" *ngFor="let x of category">
+     {{x}}
+    </ion-item>
+  </ion-list>
 </ion-content>
