--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,17 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Contact
+      Category
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
+    <ion-list-header>Learn Miltary Stuff</ion-list-header>
+    <ion-item (click)="goLearn(x)" *ngFor="let x of category">
+     {{x}}
     </ion-item>
   </ion-list>
 </ion-content>
