--- a/src/pages/article/article.html
+++ b/src/pages/article/article.html
@@ -15,7 +15,7 @@
 
 <ion-content padding>
 
-  <ion-card *ngIf="data">
+  <ion-card *ngIf="data" style="background-color:white">
     <img src="{{data.img}}"/>
     <ion-card-content>
       <ion-card-title>
